# bps-stat-agent

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Dockerfile  Dockerfile.research  LICENSE  MANIFEST.in  Makefile  README.md  coverage.json  coverage.lcov  docker-compose.yml  install.ps1  install.sh  pyproject.toml  ruff.toml
.github/workflows/: AGENTS.md  ci.yml  docker.yml
bps-master-workspace/: AGENTS.md  trigger_eval.json
bps-master-workspace/iteration-1/: benchmark.html  benchmark.json  benchmark.md  evals.json  grade_all.py
bps-master-workspace/iteration-1/eval-0-inflation-ntt/: eval_metadata.json
bps-master-workspace/iteration-1/eval-0-inflation-ntt/baseline/: timing.json
bps-master-workspace/iteration-1/eval-0-inflation-ntt/baseline/outputs/: inflation-ntt-maret-2026.txt
bps-master-workspace/iteration-1/eval-0-inflation-ntt/with_skill/: skill_executor.py  skill_executor2.py  skill_executor3.py  skill_executor4.py  skill_executor5.py  timing.json
bps-master-workspace/iteration-1/eval-0-inflation-ntt/with_skill/outputs/: inflation-ntt-response.txt
bps-master-workspace/iteration-1/eval-1-gdp-national/: eval_metadata.json
bps-master-workspace/iteration-1/eval-1-gdp-national/baseline/: timing.json
bps-master-workspace/iteration-1/eval-1-gdp-national/with_skill/: timing.json
bps-master-workspace/iteration-1/eval-2-hdi-ntt/: eval_metadata.json
bps-master-workspace/iteration-1/eval-2-hdi-ntt/baseline/: timing.json
bps-master-workspace/iteration-1/eval-2-hdi-ntt/with_skill/: timing.json
bps-webapidoc/: AGENTS.md  BPS_WEBAPI_COMPLETE_MAPPING.md  BPS_WEBAPI_COMPREHENSIVE.md  BPS_WEBAPI_TEST_RESULTS.md  webapidoc.md
docs/: AGENTS.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_CN.md  PRODUCTION_GUIDE.md  PRODUCTION_GUIDE_CN.md
docs/superpowers/plans/: 2026-04-23-bps-agent-production-implementation.md
docs/superpowers/specs/: 2026-04-23-bps-agent-production-design.md
examples/: AGENTS.md  README.md  README_CN.md
futureupdate/: AGENTS.md  API-INTEGRATIONS.md  ARCHITECTURE.md  DEPENDENCIES.md  IMPLEMENTATION-GUIDE.md  MIGRATION-PATH.md  OPENSOURCE-TOOLS-ECOSYSTEM.md  PAPER-TEMPLATES.md  README.md  RESEARCH-WORKFLOW.md  ROADMAP.md  TEST-PLAN.md  TOOLS-SPEC.md
mini_agent/: AGENTS.md  __init__.py  agent.py  allstats_client.py  bps_api.py  bps_api.py,cover  bps_data_retriever.py  bps_mcp_server.py  bps_models.py  bps_normalization.py  bps_orchestrator.py  bps_resolution.py  bps_resource_retriever.py  cli.py  colors.py  config.py  health.py  logger.py  logging_config.py  metrics.py  retry.py  setup_wizard.py  tracing.py
mini_agent/acp/: AGENTS.md  __init__.py
mini_agent/config/: AGENTS.md  config-example.yaml  mcp-example.json  mcp-research.json  research_config.yaml  system_prompt.md  system_prompt_research.md
mini_agent/config/system_prompts/: AGENTS.md  citation_verifier.md  orchestrator.md  peer_reviewer.md  section_writer.md  stat_validator.md
mini_agent/llm/: AGENTS.md  __init__.py  litellm_client.py  llm_wrapper.py  openai_client.py
mini_agent/research/: AGENTS.md  __init__.py  _dspy_compat.py  apa_formatter.py  approval_gates.py  constants.py  exceptions.py  llm_gateway.py  orchestrator.py  phase_manager.py  project_state.py  session_resume.py  sub_agents.py  tool_registry.py  workspace.py
mini_agent/research/dspy_modules/: AGENTS.md  __init__.py  modules.py  signatures.py
mini_agent/research/models/: AGENTS.md  __init__.py  cost_tracker.py  decision_log.py
mini_agent/research/quality/: AGENTS.md  __init__.py  citation_verifier.py  peer_reviewer.py  stat_validator.py  writing_quality.py
mini_agent/research/writing/: AGENTS.md  __init__.py  bibliography.py  latex_compiler.py  section_writer.py  template_registry.py
mini_agent/schema/: AGENTS.md  __init__.py  schema.py
mini_agent/skills/: AGENTS.md
mini_agent/skills/academic-research/: SKILL.md
mini_agent/skills/bps-master/: SKILL.md
mini_agent/skills/bps-master/references/: domain_codes.md
mini_agent/skills/bps-master/scripts/: query_bps.py
mini_agent/skills/document-skills/docx/scripts/: document.py  (+1 more)
mini_agent/skills/document-skills/xlsx/: recalc.py
mini_agent/skills/slack-gif-creator/core/: color_palettes.py  frame_composer.py  gif_builder.py  typography.py  validators.py  visual_effects.py
mini_agent/skills/slack-gif-creator/templates/: bounce.py  explode.py  fade.py  flip.py  kaleidoscope.py  morph.py  move.py  pulse.py  shake.py  slide.py  spin.py  wiggle.py  zoom.py
mini_agent/skills/webapp-testing/scripts/: with_server.py
mini_agent/tools/: AGENTS.md  __init__.py  analysis_tools.py  bash_tool.py  citation_tools.py  config_tools.py  document_tools.py  file_tools.py  knowledge_tools.py  mcp_loader.py  note_tool.py  quality_tools.py  research_tools.py  sandbox_tools.py  skill_loader.py  skill_tool.py  statistics_tools.py  writing_tools.py
mini_agent/utils/: AGENTS.md  __init__.py
plan/: AGENTS.md  FINAL-PLAN.md  MINI-AGENT-BPS-PLAN.md
scripts/: AGENTS.md  _gen_tests.py  setup-config.ps1  setup-config.sh
tests/: AGENTS.md  conftest.py  test_acp.py  test_agent.py  test_agent_coverage.py  test_allstats_client.py  test_allstats_client_coverage.py  test_allstats_comprehensive.py  test_analysis_deep.py  test_analysis_tools_comprehensive.py  test_analysis_tools_extended.py  test_analysis_tools_full.py  test_analysis_tools_mocked.py  test_apa_formatter.py  test_approval_gates.py  test_approval_gates_extended.py  test_bps_accuracy_audit.py  test_bps_api.py  test_bps_data_retriever_coverage.py  test_bps_live_smoke.py  test_bps_mcp_extended.py  test_bps_mcp_full.py  test_bps_mcp_handlers.py  test_bps_mcp_server.py  test_bps_normalization.py  test_bps_orchestrator.py  test_bps_parser.py  test_bps_resolution.py  test_bps_resource_retriever.py  test_citation_tools_extended.py  test_citation_tools_full.py  test_cli_comprehensive.py  test_cli_coverage.py  test_cli_full.py  test_cli_module.py  test_colors.py  test_config_bps.py  test_config_extended.py  test_config_tools.py  test_cost_tracker.py  (+67 more)
(+8 files in other folders)
