[project]
name = "bps-stat-agent"
version = "1.0.0"
description = "BPS Indonesia Statistical Data Agent - Search and query BPS data via AllStats Search Engine and WebAPI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Julio Christian Wadu Doko", email = "juliochwd@gmail.com"}
]
license = {text = "MIT"}
keywords = ["bps", "statistics", "indonesia", "ntt", "agent", "mcp", "badan-pusat-statistik"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "pytest>=8.4.2",
    "requests>=2.31.0",
    "tiktoken>=0.5.0",
    "prompt-toolkit>=3.0.0",
    "pip>=26.0",
    "pipx>=1.8.0",
    "anthropic>=0.39.0",
    "openai>=1.57.4",
    "agent-client-protocol>=0.6.0",
    "playwright>=1.40.0",
]

[project.scripts]
bps-stat-agent = "mini_agent.cli:main"
bps-stat-agent-acp = "mini_agent.acp.server:main"
bps-mcp-server = "mini_agent.bps_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mini_agent = ["skills/**/*", "config/*"]

[tool.setuptools.packages.find]
include = ["mini_agent*"]
exclude = ["tests*", "plan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "workspace/.pytest_cache"
asyncio_mode = "auto"
markers = [
    "live: tests that hit real upstream BPS services",
]

[tool.pylint.messages_control]
# Disable warnings for Tool.execute method signature differences
# We intentionally use explicit parameters in subclasses for better type hints
disable = [
    "arguments-differ",  # Allow subclasses to have different parameter signatures
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
