[project]
name = "bps-stat-agent"
version = "0.2.0"
description = "BPS Indonesia Statistical Data Agent - Search and query BPS data via AllStats Search Engine and WebAPI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Julio Christian Wadu Doko", email = "juliochwd@gmail.com"}
]
license = {text = "MIT"}
keywords = ["bps", "statistics", "indonesia", "ntt", "agent", "mcp", "badan-pusat-statistik"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "mcp>=1.23.0",
    "requests>=2.33.0",
    "tiktoken>=0.5.0",
    "prompt-toolkit>=3.0.0",
    "anthropic>=0.39.0",
    "openai>=1.57.4",
    "agent-client-protocol>=0.6.0",
    "playwright>=1.40.0",
    # Transitive dep pins for security (CVE fixes)
    "urllib3>=2.6.3",           # CVE-2026-21441, CVE-2025-66471, CVE-2025-66418
    "python-multipart>=0.0.26", # CVE-2026-24486, CVE-2026-40347
    "starlette>=0.49.0",        # CVE-2025-62727
    "python-dotenv>=1.2.2",     # Symlink following in set_key
    "Pygments>=2.20.0",         # ReDoS via GUID matching
]

[project.scripts]
bps-stat-agent = "mini_agent.cli:main"
bps-stat-agent-acp = "mini_agent.acp.server:main"
bps-mcp-server = "mini_agent.bps_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
]
metrics = [
    "prometheus-client>=0.20.0",
]
tracing = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
observability = [
    "prometheus-client>=0.20.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mini_agent = ["skills/**/*", "config/*"]

[tool.setuptools.packages.find]
include = ["mini_agent*"]
exclude = ["tests*", "plan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "workspace/.pytest_cache"
asyncio_mode = "auto"
markers = [
    "live: tests that hit real upstream BPS services",
]

[tool.pylint.messages_control]
# Disable warnings for Tool.execute method signature differences
# We intentionally use explicit parameters in subclasses for better type hints
disable = [
    "arguments-differ",  # Allow subclasses to have different parameter signatures
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
